--- a/src/battle.html
+++ b/src/battle.html
@@ -31,7 +31,7 @@
             background-color: black;
             color: white;
             overflow: hidden;
-            background-image: url("sprites/street.gif");
+            background-image: none;
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -91,15 +91,15 @@
             font-family: 'pst';
             padding: 7.5px;
             float: right;
-            overflow:hidden;
+            overflow: hidden;
         }
 
         #enemyHPBarFill,
         #playerHPBarFill {
             width: 100%;
-    background-color: white;
-    box-shadow: 7.5px 7.5px 20px black;
-    transition: all 0.5s;        
+            background-color: white;
+            box-shadow: 7.5px 7.5px 20px black;
+            transition: all 0.5s;
         }
 
         #enemyHPBarText,
@@ -159,13 +159,12 @@
 
         #playerMenu {
             display: grid;
-            width: 100%;
             background-color: #1a1a1a50;
             padding: 7.5px;
             margin: 10px;
             box-sizing: content-box;
             width: calc(100% - 35px);
-            height: 130px;
+            height: 135px;
             background-image: linear-gradient(0deg, #1a1a1a50, #000000a0);
         }
 
@@ -336,7 +335,7 @@
             color: white;
             padding-top: 2.5px;
             padding-bottom: 2.5px;
-        height: 100%;
+            height: 100%;
             margin: 5px;
             margin-left: 0px;
             margin-right: 0px;
@@ -442,13 +441,42 @@
         #move2Damage,
         #move3Damage {
             text-decoration: underline;
-    text-decoration-color: #a1a1a1a0;
-    padding: 2.5px;
-    padding-bottom: 10px;
-    background-color: transparent;
-    text-decoration-thickness: 1.5px;
-    text-decoration-style: dotted;
+            text-decoration-color: #a1a1a1a0;
+            padding: 2.5px;
+            padding-bottom: 10px;
+            background-color: transparent;
+            text-decoration-thickness: 1.5px;
+            text-decoration-style: dotted;
         }
+
+        #battleCosmetics {
+            position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 60%;
+    background-color: #1a1a1a50;
+    filter: blur(10px);
+    width: 100%;
+    height: 100%;
+        }
+
+    #battleCosmetics img {
+        transform: scale(1.5);
+    position: absolute;
+    left: -25%;
+    top: 20%;
+    }
+
+    @keyframes gradualmove {
+        0% {
+            transform: translate(0px, 0px);
+        }
+
+        100% {
+            transform: translate(100px, 100px);
+        }
+    }
+
     </style>
 </head>
 
@@ -456,6 +484,10 @@
 
 
     <div id="battleFrame">
+
+        <div id="battleCosmetics">
+            <img src="sprites/police.gif" alt="">
+        </div>
 
         <div id="light">
 
@@ -532,7 +564,7 @@
                     <div id="playerBorder">
                         <div id="playerMoves">
 
-                            <div class="moveButton" id="playerMove1">
+                            <div class="moveButton" id="playerMove1" title = "Use this move">
 
                                 <div class="moveTopBar">
                                     <h1 id="move1Title">Move Title</h1>
@@ -550,7 +582,7 @@
 
                             </div>
 
-                            <div class="moveButton" id="playerMove2">
+                            <div class="moveButton" id="playerMove2" title = "Use this move">
 
                                 <div class="moveTopBar">
                                     <h1 id="move2Title">Move Title</h1>
@@ -568,7 +600,7 @@
 
                             </div>
 
-                            <div class="moveButton" id="playerMove3">
+                            <div class="moveButton" id="playerMove3" title = "Use this move">
 
                                 <div class="moveTopBar">
                                     <h1 id="move3Title">Move Title</h1>
