--- a/src/battle.html
+++ b/src/battle.html
@@ -957,7 +957,8 @@
 <script>
 
     window.onload = function () {
-        police.hp = Math.floor(Math.random() * 250) + 250;
+        police.hp = Math.floor(Math.random() * 25) + 25;
+        //police.hp = Math.floor(Math.random() * 250) + 250;
         policeMaxHP = police.hp;
 
         // detect if there's any data in the URL
